# nasa-asteroids-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
bigquery/: near_asteroids.sql
conf/: service_account_example.json  setup_env.sh
nasa_asteroids_data/: asteroids-2024-06-24.csv  asteroids-2024-06-26.csv
src/main/python/: config.py  extractor.py  gcp_utils.py  logging_utils.py  main.py  transform.py
